fixing add cart responsiveness on mobile design

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -9,6 +9,7 @@ header{
 header button{
     border:none;
     outline: none;
+    background: none;
 }
 header button:hover{
     cursor: pointer;
